--- a/style.css
+++ b/style.css
@@ -120,7 +120,10 @@ img{
     background-color: var(--regular-color1);
     margin-left: 30px ;
 }
-
+.btn-1:hover{
+    background-color: var(--button-color);
+    color: var(--regular-color2);
+}
 .btn-1{
     height: 55px;
     width: 210px;
