--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body{
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
+a{
+    text-decoration: none;
+    color: #000;
+}
 
 img{
     width: 100%;
@@ -125,6 +129,7 @@ img{
     color: var(--regular-color2);
 }
 .btn-1{
+    text-decoration: none;
     height: 55px;
     width: 210px;
     border-radius: 10px;
